<resources>
    <string name="app_name">Help Out</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="done">Done</string>
    <string name="alphabet_restriction_name_only">abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="error_message_first_name_empty">Enter First Name</string>
    <string name="error_message_last_name_empty">Enter Last Name</string>
    <string name="error_message_last_name_minimum_characters">Last name should have atleast 2 characters.</string>
    <string name="error_message_first_name_minimum_characters">First name should have atleast 2 characters.</string>
    <string name="phoneNumber">Phone number</string>
    <string name="error_message_phone_number">Enter Phone number</string>
    <string name="error_message_invalid_phone">Enter Valid Phone number</string>
    <string name="category_toolbar_text">Choose Category</string>
    <string name="try_again">Try again</string>
    <string name="no_internet_title">Please check your internet connection</string>
    <string name="some_thing_went_wrong">Something went wrong</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="logout_confirmation">Are you sure you want to Logout?</string>
    <string name="verify_code">Enter 4 digit Code</string>
    <string name="verify_code_button">Verify Code</string>
    <string name="error_message_code_empty">Enter 4 digit Code</string>
    <string name="PHONE_NUMBER">phone_number</string>
</resources>
