<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dp20"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="helpout.vikramtandonapps.com.helpout.activity.LoginActivity"
    tools:showIn="@layout/activity_login">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/login"
            android:textColor="@android:color/black" />
        <TextView
            android:id="@+id/tvSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/signup"
            android:visibility="gone"
            android:textColor="@android:color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/tvLogin"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp70"
                android:text="@string/signup"
                android:id="@+id/tvTitle"
                android:textColor="@android:color/black"
                android:textSize="@dimen/sp30" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp19"
                android:paddingRight="@dimen/dp2">

                <EditText
                    android:id="@+id/etFirstName"
                    style="@style/EditTextStyle"
                    android:digits="@string/alphabet_restriction_name_only"
                    android:hint="@string/first_name"
                    android:inputType="textCapSentences"
                    android:maxLength="50" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp15"
                android:paddingRight="@dimen/dp2">

                <EditText
                    android:id="@+id/etLastName"
                    style="@style/EditTextStyle"
                    android:digits="@string/alphabet_restriction_name_only"
                    android:hint="@string/last_name"
                    android:inputType="textCapSentences"
                    android:maxLength="50" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tilPhone"
                android:layout_gravity="bottom"
                android:layout_marginTop="@dimen/dp15">
                <EditText
                    android:id="@+id/etPhone"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:hint="@string/phoneNumber"
                    android:maxLength="12"
                    android:inputType="phone"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>


            <TextView
            android:id="@+id/tvDone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="@dimen/dp20"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:maxLines="1"
            android:padding="@dimen/dp15"
            android:text="@string/done"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp18" />




        </LinearLayout>


    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
