
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="@dimen/dp4"
    card_view:cardElevation="@dimen/dp5"
    card_view:cardUseCompatPadding="true"
    >
    <LinearLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@android:color/white">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp35"
            android:textSize="@dimen/sp20"
            android:textColor="@android:color/black"
            android:gravity="center"
            android:text="@string/logout_confirmation"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@android:color/darker_gray" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="@dimen/dp10"
                android:text="@string/cancel"
                android:textStyle="bold"
                android:id="@+id/cancelLogout"
                android:textColor="@android:color/black"
                android:textSize="@dimen/sp20" />
            <View

                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ok"
                android:padding="@dimen/dp10"
                android:id="@+id/okLogout"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@android:color/black"
                android:textSize="@dimen/dp20" />

        </LinearLayout>


</LinearLayout>

</android.support.v7.widget.CardView>
